VP-534-Refactoring to reduce the number of courthouse api call
VP-534-Refactoring to reduce the number of courthouse api call